Added locations in response from "GET /user/{uid}/sessions" endpoint
